--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "react-example",
+  "name": "react-rotation",
   "description": "React rotation component",
   "version": "0.0.0",
   "repository": "andrepolischuk/react-rotation",
   "dependencies": {
     "bootstrap-gh-pages": "^0.2.1",
+    "events": "^1.0.2",
     "react": "^0.13.3",
-    "react-rotation": "^0.1.1"
+    "react-rotation": "^0.2.0"
   },
   "devDependencies": {
     "babelify": "^6.1.2",
