--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "repository": "andrepolischuk/react-rotation",
   "dependencies": {
     "autobind-decorator": "^1.3.2",
-    "react": "^0.13.3"
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2"
   },
   "devDependencies": {
     "ava": "^0.2.0",
-    "babel": "^5.5.6"
+    "babel": "^5.5.6",
+    "react-addons-test-utils": "^0.14.2"
   },
   "main": "index.es5.js",
   "scripts": {
