--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "react-dom": "^0.14.2"
   },
   "devDependencies": {
-    "ava": "^0.2.0",
+    "ava": "^0.8.0",
     "babel": "^5.5.6",
     "react-addons-test-utils": "^0.14.2"
   },
   "main": "index.es5.js",
   "scripts": {
-    "test": "babel-node --stage 0 test.js",
-    "transpile": "babel --stage 0 index.js > index.es5.js",
-    "prepublish": "npm run transpile",
+    "pretest": "npm run prepublish",
+    "test": "ava",
+    "prepublish": "babel --stage 0 index.js --out-file index.es5.js",
     "postpublish": "rm -rf *.es5.js"
   },
   "author": "Andrey Polischuk <andre.polischuk@gmail.com>",
