--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
   },
   "devDependencies": {
     "ava": "^0.8.0",
-    "babel": "^5.5.6",
+    "babel-cli": "^6.9.0",
+    "babel-plugin-transform-class-properties": "^6.9.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "react-addons-test-utils": "^15.0.2"
   },
   "main": "index.es5.js",
   "scripts": {
     "pretest": "npm run prepublish",
     "test": "ava",
-    "prepublish": "babel --stage 0 index.js --out-file index.es5.js",
+    "prepublish": "babel index.js --out-file index.es5.js",
     "postpublish": "rm -rf *.es5.js && git push --follow-tags"
   },
   "author": "Andrey Polischuk <andre.polischuk@gmail.com>",
