--- a/package.json
+++ b/package.json
@@ -16,21 +16,28 @@
     "react-dom": "^15.0.2"
   },
   "devDependencies": {
-    "ava": "^0.8.0",
+    "ava": "^0.14.0",
     "babel-cli": "^6.9.0",
     "babel-plugin-transform-class-properties": "^6.9.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.9.0",
+    "enzyme": "^2.3.0",
     "react-addons-test-utils": "^15.0.2"
   },
   "main": "index.es5.js",
   "scripts": {
-    "pretest": "npm run prepublish",
     "test": "ava",
     "prepublish": "babel index.js --out-file index.es5.js",
     "postpublish": "rm -rf *.es5.js && git push --follow-tags"
   },
   "author": "Andrey Polischuk <andre.polischuk@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "ava": {
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
+  }
 }
