--- a/package.json
+++ b/package.json
@@ -18,17 +18,23 @@
   "devDependencies": {
     "ava": "^0.14.0",
     "babel-cli": "^6.9.0",
+    "babel-eslint": "^6.0.4",
     "babel-plugin-transform-class-properties": "^6.9.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
     "enzyme": "^2.3.0",
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.1.1",
     "react-addons-test-utils": "^15.0.2"
   },
   "main": "index.es5.js",
   "scripts": {
-    "test": "ava",
+    "test": "eslint . && ava",
     "prepublish": "babel index.js --out-file index.es5.js",
     "postpublish": "rm -rf *.es5.js && git push --follow-tags"
   },
