--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "index.es5.js"
   ],
   "scripts": {
-    "test": "eslint . && ava",
+    "test": "standard && ava",
     "prepublish": "babel index.js --out-file index.es5.js",
     "postpublish": "rimraf index.es5.js && git push --follow-tags"
   },
@@ -45,13 +45,12 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
     "enzyme": "^2.3.0",
-    "eslint": "^2.10.2",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.0",
-    "eslint-plugin-jsx-a11y": "^1.2.2",
-    "eslint-plugin-react": "^5.1.1",
     "react-addons-test-utils": "^15.1.0",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "standard": "^10.0.3"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   },
   "ava": {
     "require": [
