--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   ],
   "dependencies": {
     "prop-types": "^15.5.10",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react": "^15.1.0"
   },
   "devDependencies": {
     "ava": "^0.14.0",
