Add missed react-dom

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-register": "^6.9.0",
     "enzyme": "^2.3.0",
     "react-addons-test-utils": "^15.1.0",
+    "react-dom": "^15.1.0",
     "rimraf": "^2.5.2",
     "standard": "^10.0.3"
   },
